# Scrambler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: ci.yml
.github/workflows/: ci.yml
include/core/: DelayQueue.h  Diagnostics.h  EffectConfig.h  FlowTracker.h  PacketData.h  PacketEffectEngine.h  PacketInterceptor.h  ScheduledPacketQueue.h  StartupError.h  Types.h
include/platform/: ProcessEnumerator.h
include/ui/: DiagnosticsTab.h  HotkeyEdit.h  HotkeyManager.h  MainWindow.h  SoundPlayer.h
resources/: scrambler.rc
src/: main.cpp
src/core/: DelayQueue.cpp  Diagnostics.cpp  FlowTracker.cpp  PacketEffectEngine.cpp  PacketInterceptor.cpp  StartupError.cpp
src/platform/: ProcessEnumerator.cpp
src/ui/: DiagnosticsTab.cpp  HotkeyManager.cpp  MainWindow.cpp  SoundPlayer.cpp
tests/: EffectConfigTest.cpp  FiveTupleTest.cpp  PacketEffectEngineTest.cpp  ProcessEnumeratorTest.cpp  ScheduledPacketQueueTest.cpp  TargetSetTest.cpp
